update logic for transmitting current help key

--- a/template.html
+++ b/template.html
@@ -4,5 +4,7 @@
     <title>BB Help Client</title>
   </head>
   <body>
+    Demo:
+    <button onclick="BBHELP.HelpWidget.loadDemo();">Load Help Client</button>
   </body>
 </html>
