Update current help key (#29)
* add close message

* update current help key logic

* update logic for transmitting current help key

* remove comment

* update wait logic

* fix test

* remove ready logic on setCurrentHelpKey

* Support get current key (#31)

* added support for passing in a getCurrentHelpKey method

* updating getCurrentHelpKey logic

* tests

* removed f describe

* removed .

--- a/template.html
+++ b/template.html
@@ -4,5 +4,20 @@
     <title>BB Help Client</title>
   </head>
   <body>
+    Demo:
+    <button id="demo-button">Load Help Client</button>
+    <script>
+      let button = document.getElementById('demo-button');
+      button.addEventListener('click', loadDemo);
+
+      function loadDemo() {
+        const config = {
+          customLocales: [],
+          defaultHelpKey: 'bb-role-based-best-practices.html',
+          extends: 'renxt'
+        };
+        BBHELP.HelpWidget.load(config);
+      }
+    </script>
   </body>
 </html>
