updated to use dependency injection

--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
         const config = {
           customLocales: [],
           defaultHelpKey: 'bb-role-based-best-practices.html',
-          extends: 'renxt'
+          extends: 'chrch'
         };
         BBHELP.HelpWidget.load(config);
       }
