using test config

--- a/template.html
+++ b/template.html
@@ -13,8 +13,8 @@
       function loadDemo() {
         const config = {
           customLocales: [],
-          defaultHelpKey: 'bb-role-based-best-practices.html',
-          extends: 'chrch'
+          defaultHelpKey: 'default.html',
+          extends: 'bbhelp'
         };
         BBHELP.HelpWidget.load(config);
       }
