refactor: follow BB casing in demo page
Co-authored-by: John Lyons <John.Lyons@blackbaud.com>

--- a/template.html
+++ b/template.html
@@ -16,7 +16,7 @@
   <div class="sky-form-group">
     <label for="locales" class="sky-control-label">Locale</label>
     <select class="sky-form-control" id="locales">
-      <option value="">UNSPECIFIED</option>
+      <option value="">Unspecified</option>
     </select>
   </div>
   <ul id="svcid-configs"></ul>
