refactor: order svcids

--- a/template.html
+++ b/template.html
@@ -38,9 +38,8 @@
 
     function loadSvcidList() {
       const svcids = [
-        'admin', 'bbcrm', 'award-management', 'stewardship-management',
-        'chrch', 'edu', 'faith', 'fenxt', 'fenxt(fenxt.cdev)', 'fenxt(fenxt.ate)',
-        'fndlite', 'marketplace', 'renxt', 'smallgroups', 'tcs', 'gmk'
+        'admin', 'award-management', 'bbcrm', 'chrch', 'edu', 'faith', 'fenxt', 'fenxt(fenxt.cdev)', 'fenxt(fenxt.ate)',
+        'fndlite', 'gmk', 'marketplace', 'renxt', 'smallgroups', 'stewardship-management', 'tcs'
       ];
       const list = document.getElementById('svcid-configs');
       svcids.forEach((id) => {
