--- a/template.html
+++ b/template.html
@@ -6,56 +6,63 @@
   <link rel="stylesheet" type="text/css"
         href="https://d1ed2bc0tt12m5.cloudfront.net/styles.c10433e4334ac7100968.css"/>
 </head>
-<body style="overflow: auto" onload="loadDemo()">
+<body style="overflow: auto" onload="renderFormAndLoadWidget()">
 <main class="sky-padding-even-default">
   <h1>help-client demo</h1>
   <h2>Standard svcid configs</h2>
-  <div class="sky-form-group">
-    <button class="sky-btn sky-btn-default" onclick="unloadWidget()">Unload</button>
-  </div>
-  <div class="sky-form-group">
-    <label for="locales" class="sky-control-label">Locale</label>
-    <select class="sky-form-control" id="locales">
-      <option value="">Unspecified</option>
-    </select>
-  </div>
-  <ul id="svcid-configs"></ul>
+  <form name="widgetLoad" onchange="renderConfig(); loadWidget()">
+    <div class="sky-form-group">
+      <label for="svcid" class="sky-control-label sky-control-label-required">Service Id</label>
+      <select class="sky-form-control" id="svcid"></select>
+      <label for="locale" class="sky-control-label">Locale</label>
+      <select class="sky-form-control" id="locale">
+        <option value="">Unspecified</option>
+      </select>
+    </div>
+  </form>
+  <h3>Resulting config</h3>
+  <pre><code id="config"></code></pre>
   <script>
-    function unloadWidget() {
-      BBHELP.HelpWidget.unload();
+    function renderConfig() {
+      document.getElementById('config').textContent = JSON.stringify(buildConfig());
     }
 
-    function loadWidget(svcid) {
-      unloadWidget();
-      const locale = document.getElementById('locales').value;
+    function buildConfig() {
+      const form = document.forms['widgetLoad'];
+      const svcid = form.elements['svcid'].value
+      const locale = form.elements['locale'].value
       const config = { extends: svcid };
       if (locale) {
         config.locale = locale;
       }
-      console.log(config)
-      BBHELP.HelpWidget.load(config);
+      return config;
     }
 
-    function loadSvcidList() {
+    function loadWidget() {
+      BBHELP.HelpWidget.unload();
+      const config = buildConfig();
+      if (config.extends) {
+        BBHELP.HelpWidget.load(config);
+      }
+    }
+
+    function renderSvcIds() {
       const svcids = [
         'admin', 'award-management', 'bbcrm', 'chrch', 'edu', 'faith', 'fenxt', 'fenxt(fenxt.cdev)', 'fenxt(fenxt.ate)',
         'fndlite', 'gmk', 'marketplace', 'renxt', 'smallgroups', 'stewardship-management', 'tcs'
       ];
-      const list = document.getElementById('svcid-configs');
+      const select = document.getElementById('svcid');
       svcids.forEach((id) => {
-        const button = document.createElement('button');
-        button.appendChild(document.createTextNode(id));
-        button.setAttribute('class', 'sky-btn sky-btn-link');
-        button.addEventListener('click', loadWidget.bind(null, id));
-        const item = document.createElement('li');
-        item.appendChild(button);
-        list.appendChild(item);
+        const option = document.createElement('option');
+        option.appendChild(document.createTextNode(id));
+        option.setAttribute('value', id);
+        select.appendChild(option);
       });
     }
 
-    function loadLocales() {
+    function renderLocales() {
       const locales = ['en-us', 'en-gb', 'en-ca', 'en-au', 'en-nz', 'es-mx', 'qa', 'fr'];
-      const select = document.getElementById('locales');
+      const select = document.getElementById('locale');
       locales.forEach(locale => {
         const option = document.createElement('option');
         option.appendChild(document.createTextNode(locale));
@@ -64,9 +71,11 @@
       });
     }
 
-    function loadDemo() {
-      loadLocales();
-      loadSvcidList();
+    function renderFormAndLoadWidget() {
+      renderLocales();
+      renderSvcIds();
+      renderConfig();
+      loadWidget();
     }
   </script>
 </main>
