feat: use trasnparent bg

--- a/template.html
+++ b/template.html
@@ -8,11 +8,11 @@
   <style>
     .fake-omnibar {
       background-color: #4d5259;
-      width: 1238px;
+      width: 100%;
       height: 45px;
     }
     .fake-omnibar-accent {
-      width: 1238px;
+      width: 100%;
       height: 5px;
       background: linear-gradient(to right, #71bf44 0, #31b986 50%, #00b2ec 100%);
     }
