--- a/template.html
+++ b/template.html
@@ -5,8 +5,22 @@
   <!--a hacky, get-it-done-now way to bring in styles from @skyux/theme-->
   <link rel="stylesheet" type="text/css"
         href="https://d1ed2bc0tt12m5.cloudfront.net/styles.c10433e4334ac7100968.css"/>
+  <style>
+    .fake-omnibar {
+      background-color: #4d5259;
+      width: 100%;
+      height: 45px;
+    }
+    .fake-omnibar-accent {
+      width: 100%;
+      height: 5px;
+      background: linear-gradient(to right, #71bf44 0, #31b986 50%, #00b2ec 100%);
+    }
+  </style>
 </head>
 <body style="overflow: auto" onload="renderFormAndLoadWidget()">
+<div class="fake-omnibar-accent"></div>
+<div class="fake-omnibar"></div>
 <main class="sky-padding-even-default">
   <h1>help-client demo</h1>
   <h2>Standard svcid configs</h2>
