--- a/template.html
+++ b/template.html
@@ -6,10 +6,21 @@
   <link rel="stylesheet" type="text/css"
         href="https://d1ed2bc0tt12m5.cloudfront.net/styles.c10433e4334ac7100968.css"/>
   <style>
+    body {
+      overflow: auto;
+    }
+
     .fake-omnibar {
       background-color: #4d5259;
       width: 100%;
       height: 45px;
+    }
+
+    body.sky-theme-modern > .fake-omnibar {
+      background-color: #fff;
+      height: 46px;
+      border-bottom: solid 1px #e2e3e4;
+      /*color: #212327;*/
     }
 
     .fake-omnibar-accent {
@@ -19,9 +30,12 @@
     }
   </style>
 </head>
-<body style="overflow: auto" onload="renderFormAndLoadWidget()">
+<body class="sky-theme-modern" onload="renderFormAndLoadWidget()">
 <div class="fake-omnibar-accent"></div>
 <div class="fake-omnibar"></div>
+<div>
+  <button onclick="switchTheme()">Switch theme</button>
+</div>
 <main class="sky-padding-even-default">
   <h1>help-client demo</h1>
   <h2>Standard svcid configs</h2>
@@ -89,6 +103,11 @@
       renderSvcIds();
       renderConfig();
       await loadWidget();
+      document.querySelector('button#bb-help-invoker').click();
+    }
+
+    function switchTheme() {
+      document.body.classList.toggle('sky-theme-modern');
     }
   </script>
 </main>
