fix: bring back default theme hover

--- a/template.html
+++ b/template.html
@@ -39,7 +39,7 @@
     }
   </style>
 </head>
-<body class="sky-theme-modern" onload="renderFormAndLoadWidget()">
+<body onload="renderFormAndLoadWidget()">
 <div class="fake-omnibar-accent"></div>
 <div class="fake-omnibar"></div>
 <div>
