--- a/template.html
+++ b/template.html
@@ -68,12 +68,23 @@
     <form name="topicOpen">
       <div class="sky-form-group">
         <label for="topic" class="sky-control-label">Topic</label>
-        <input class="sky-form-control" id="topic" type="text" placeholder="leave empty to open default topic"/>
+        <input class="sky-form-control" id="topic" type="text" placeholder="leave empty to open current topic"/>
       </div>
     </form>
     <button class="sky-btn sky-btn-default" onclick="openTopic()">Open topic</button>
   </section>
 
+  <h2>Set current topic</h2>
+  <section>
+    <form name="topicSet">
+      <div class="sky-form-group">
+        <label for="newTopic" class="sky-control-label">New topic</label>
+        <input type="text" class="sky-form-control" id="newTopic" placeholder="leave empty to reset to default topic"/>
+      </div>
+    </form>
+    <button class="sky-btn sky-btn-default" onclick="setTopic()">Set topic</button>
+    <button class="sky-btn sky-btn-default" onclick="openTopic(true)">Open topic</button>
+  </section>
   <script>
     function renderConfig() {
       document.getElementById('config').textContent = JSON.stringify(buildConfig());
@@ -133,13 +144,24 @@
       document.body.classList.toggle('sky-theme-modern');
     }
 
-    function openTopic() {
+    function openTopic(openCurrentTopic = false) {
       const form = document.forms['topicOpen'];
       const topic = form.elements['topic'].value;
-      if (topic) {
+      if (topic && !openCurrentTopic) {
         BBHELP.HelpWidget.open(topic);
       } else {
         BBHELP.HelpWidget.open();
+      }
+    }
+
+    function setTopic() {
+      const form = document.forms['topicSet'];
+      const topic = form.elements['newTopic'].value;
+      if (topic) {
+        BBHELP.HelpWidget.setCurrentHelpKey(topic);
+        form.elements['newTopic'].value = '';
+      } else {
+        BBHELP.HelpWidget.setCurrentHelpKey();
       }
     }
 
